Fix stretching of some media preview in editor

--- a/LANCommander/wwwroot/css/site.css
+++ b/LANCommander/wwwroot/css/site.css
@@ -214,6 +214,7 @@
 .media-editor img {
     max-width: 100px;
     max-height: 100px;
+    width: auto;
 }
 
 .media-grabber-group {
